# RaidanPROJPT

./: .env.example  App.tsx  DEPLOYMENT_MANUAL.md  Dockerfile.frontend.txt  Dockerfile.yemen_core.txt  LEGAL_TECHNICAL_REPORT.md  README.md  about.txt  audit_and_fix.sh  bootstrapper.sh  build.txt  constants.tsx  database.sql  dns.txt  dock.txt  docker-compose.agentic.yml  docker-compose.mailcow.yml  docker-compose.yml  index.html  index.tsx  info.txt  install.sh  legal_hardener.py  legal_injector.py  master_deployer.sh  metadata.json  nginx.conf  package.json  react.txt  setup_native_brain.sh  setup_raidan_master.sh  setup_wizard.sh  theme.txt  tool.txt  types.ts  validate_stage.py
backend/: dns_automator.py  email_engine.py  install_logic.py  main.py  provisioning_engine.py  ray_actors.py  ray_infra.py  requirements.txt  snapshot_engine.py
backend/cli/: pyproject.toml
backend/cli/raidan_ai/: cli.py
components/: AIAssistant.tsx  App.tsx  BrandingPage.tsx  ConfigGenerator.tsx  CoreSettings.tsx  DNSManager.tsx  DataFeedsManager.tsx  DataJournalism.tsx  DialectEngine.tsx  DomainManager.tsx  EmailSettingsDashboard.tsx  Footer.tsx  ForensicsLab.tsx  GeoIntStation.tsx  GovernancePage.tsx  Header.tsx  IconRenderer.tsx  InfrastructureStrategy.tsx  LandingPageEditor.tsx  LoginPage.tsx  MarketingLanding.tsx  ModelForge.tsx  PiperTTSGuide.tsx  PredictiveCenter.tsx  PredictiveHub.tsx  ProfilePage.tsx  ProvisioningDashboard.tsx  ProvisioningModal.tsx  ProvisioningMonitor.tsx  PublicChatInterface.tsx  RAGOptimizationGuide.tsx  RecoveryPanel.tsx  RootCommandCenter.tsx  Sidebar.tsx  (+18 more)
(+38 files in other folders)
